[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
